--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,14 @@ body{
     margin-bottom: 20px;
 }
 
+.content-item{
+    display: none;
+}
+
+.content-item.content-item__active{
+    display: inline-block;
+}
+
 .header{
     position: relative;
     min-height: 100vh;
@@ -86,9 +94,25 @@ body{
     right: 0;
     bottom: 0;
     width: 100%;
-    background: linear-gradient(180deg, #b6b6b6 0%, rgba(235, 235, 235, 0) 100%);
     z-index: -2;
 }
+
+.header__content-images:has(.color--black.content-item__active)::before{
+    background: linear-gradient(180deg, #b6b6b6 0%, rgba(235, 235, 235, 0) 100%);
+}
+.header__content-images:has(.color--red.content-item__active)::before{
+    background: linear-gradient(180deg, #f3d6d1 0%, rgba(235, 235, 235, 0) 100%);
+}
+.header__content-images:has(.color--blue.content-item__active)::before{
+    background: linear-gradient(180deg, #cadbeb 0%, rgba(235, 235, 235, 0) 100%); 
+}
+.header__content-images:has(.color--green.content-item__active)::before{
+    background: linear-gradient(180deg, #ddead9 0%, rgba(235, 235, 235, 0) 100%);
+}
+.header__content-images:has(.color-_white.content-item__active)::before{
+    background: linear-gradient(180deg, #fafafa 0%, rgba(235, 235, 235, 0) 100%);
+}
+
 
 .title{
     font-size: 210px;
@@ -157,6 +181,10 @@ body{
     border: 1px solid #777;
     border-radius: 20px;
     padding: 50px 55px;
+}
+
+.choose-color__btn--active{
+    display: none;
 }
 
 .composition{
